# glassdoor-scraper

./: pyproject.toml
scraper/: scrape.py
