[tool.poetry]
name = "glassdoor-scraper"
version = "0.1.0"
description = ""
authors = ["Atanas Pozharliev <ABPozharliev19@codingburgas.bg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nodriver = "^0.32"
beautifulsoup4 = "^4.12.3"
price-parser = "^0.3.4"
w3lib = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
